# SparPiotrPawel

./: .gitignore  README.md
Firmware/: .gitignore
Firmware/main/: main.c  motor_control.c  motor_control.h
Firmware/robot/: .gitignore  CMakeLists.txt  README.md
Firmware/robot/main/: CMakeLists.txt  Encoder.cpp  Encoder.h  I2Cdev.cpp  I2Cdev.h  MPU6050.c  MPU6050_6Axis_MotionApps20.h  MPU6050_9Axis_MotionApps41.h  MPU6050_acc.c  SampleFilter.cpp  SampleFilter.h  esp32_i2c_rw.c  esp32_i2c_rw.h  esp_now_drv.cpp  esp_now_drv.h  example.cpp  helper_3dmath.h  i2c_simple_main.c  i2c_simple_main.h  main.c  main.cpp  motor_control.c  motor_control.cpp  motor_control.h  mpu6050.h  mpu6050_acc.h  mpu6050_read_angle.c  mpu6050_read_angle.cpp  mpu6050_read_angle.h  mpu6050_read_angle_acc.c  mpu6050_read_angle_acc.h  mpu6050_read_pitch.cpp  mpu6050_read_pitch.h  mpu6050_registers.h  pid.cpp  pid.h  state_feedback.cpp  state_feedback.h
Firmware/rrc/: CMakeLists.txt  Makefile  README.md  adc_drv.h  ascii_table.h  esp_hello.c  esp_now_drv.c  esp_setup.h  lcd_buf_drv.c  lcd_drv.c  lcd_st7032.c  main.c  menu_callback.c  menu_callback.h  switch_drv.c  switch_drv.h
Firmware/rrc/main/: .gitignore  CMakeLists.txt  README.md  adc_drv.c  adc_drv.h  ascii_table.h  enc_drv.c  enc_drv.h  esp_hello.c  esp_hello.h  esp_now_drv.c  esp_now_drv.h  esp_setup.h  lcd_buf_drv.c  lcd_buf_drv.h  lcd_drv.c  lcd_drv.h  lcd_st7032.c  lcd_st7032.h  main.c  menu.c  menu.h  menu_callback.c  menu_callback.h  pwm_drv.c  pwm_drv.h  switch_drv.c  switch_drv.h
Hardware/: readme.txt
