idf_component_register(SRCS "state_feedback.cpp" "SampleFilter.cpp" "Encoder.cpp" 
                            "esp_now_drv.cpp"
                            "pid.cpp" 
                            "mpu6050_read_angle.cpp" 
                            "main.cpp" 
                            "MPU6050.cpp" 
                            "I2Cdev.cpp"
                            "motor_control.cpp"
                    INCLUDE_DIRS ".")
