idf_component_register(SRCS "MPU6050.c" "mpu6050_read_angle.c" "state_feedback.cpp" "SampleFilter.cpp" "Encoder.cpp" 
                            "esp_now_drv.cpp"
                            "pid.cpp" 
                            
                            "main.cpp" 
                            
                           
                            "motor_control.cpp"
                    INCLUDE_DIRS ".")
